--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=DESKTOP-E7G0UOF;Database=PokemonReviewSystem;User ID=MoviesAPI;Password=01283233951;"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
